[tool.poetry]
name = "GTL"
version = "0.1.0"
description = ""
authors = ["Puria Nafisi Azizi <puria@dyne.org>"]

[tool.poetry.dependencies]
python = "^3.7"
fontparts = "^0.9.2"
taskipy = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.1.1"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]

[tool.taskipy.tasks]
hook = "pre-commit autoupdate && pre-commit install"
lint = "pre-commit run --all-files"
test = "pytest tests/"
validate = "task lint && task test"

[tool.black]
line-length = 120
target_version = ['py37']

[tool.isort]
line_length = 120
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = true
known_third_party = []
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
